--- a/public/css/cleaner_history.css
+++ b/public/css/cleaner_history.css
@@ -10,8 +10,15 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     margin: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
+.read {
+    background-color:#f2f3f4; 
+    border:1px solid #dcdcdc;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px;
+    margin: 7px;
+}
 .card-body {
     padding: 30px;
 }
@@ -55,6 +62,7 @@
     font-size: 25px;
     color: #FB8500;
     margin-left: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .fa-clipboard-list {
@@ -86,6 +94,7 @@
 
 .cleaner_cards_title {
     margin: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .row {
@@ -158,6 +167,7 @@
     text-align: left;
     align-items: center;
     justify-content: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .book_container {
