--- a/public/css/customer_service-rate.css
+++ b/public/css/customer_service-rate.css
@@ -4,7 +4,13 @@
     background-size: cover;
 }
 
-
+.read {
+    background-color:#f2f3f4; 
+    border:1px solid #dcdcdc;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px;
+    margin: 7px;
+}
 .banner {
     background-image: url(/images/home/header1.jpg);
     background-position: center;
@@ -429,6 +435,9 @@
     align-self: center;
     font-size: 20px;
     margin-top: 5px;
+}
+.modal_customer_services_title, .customer_rating_title,.title2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 @media (min-width:801px) {
