--- a/public/css/cleaner_profile.css
+++ b/public/css/cleaner_profile.css
@@ -35,6 +35,7 @@
     background-color: #fff;
     align-items: center;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .cleaner_profile_info_con {
@@ -52,8 +53,11 @@
     font-size: 15px;
     margin-top: 5px;
     background-color: #fff;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
+.modal-title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .update_btn_con {
     width: 120px;
     height: 60px;
@@ -141,12 +145,24 @@
     margin:0 auto;
     width:100%;
     height:auto;
-    overflow:hidden;
+    overflow:hidden; 
     position: relative;
     bottom: 0px;
     padding: .75%;
     color: white;
 } 
+
+.read {
+    background-color:#f2f3f4; 
+    border:1px solid #dcdcdc;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px;
+    margin: 7px;
+}
+
+.cleaner_cards_title {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 
  .icon {
