--- a/public/css/customer_services.css
+++ b/public/css/customer_services.css
@@ -44,6 +44,7 @@
     text-align: left;
     margin: 7%;
     font-size: clamp(15px, 2vw, 30px);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 @media (max-width:750px){
@@ -142,9 +143,13 @@
     align-items: center;
 
 }
-
+.card-title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
 .service_title{
     padding: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .customer_search_con{
@@ -176,12 +181,22 @@
     background-color: #FFB703;  
     border-radius: 10px; 
 }
-
+.place-type{
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .five_stars_img {
     width: 120px;
     height: 50px;
 }
-
+.modal_customer_services_title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+.customer_services_sub_1,.customer_services_modal_body_1_con,.customer_services_modal_inside_con{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .modal-header{
     background-image: url(/images/home/header.jpg);
     background-position: center;
@@ -257,7 +272,13 @@
         overflow-y: auto;
     }
 }
-
+.read {
+    background-color:#f2f3f4; 
+    border:1px solid #dcdcdc;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px;
+    margin: 7px;
+}
 .book_now_btn, .confirm_btn {
     background-color: #397fa5;
     border: #219EBC;
@@ -308,6 +329,7 @@
 
 .customer_services_modal_footer{
     padding: 16px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .modal-header {
@@ -357,7 +379,9 @@
     }
 }
 
-
+.description, .float-right{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .modal{
     margin: 0;
     padding: 0;
@@ -369,6 +393,7 @@
 
 .customer_package_pricing{
     margin: 0%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .confirm_btn:hover{
