--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -88,8 +88,8 @@
     margin-left: 0.2em;
     width: 1em;
     height: 1em;
-    border-top: 0.2em solid #219EBC;
-    border-right: 0.2em solid #219EBC;
+    border-top: 0.2em solid #f58c00;
+    border-right: 0.2em solid #f58c00;
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
