--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -132,13 +132,16 @@
         text-align: center;
     }
     .weekly_revenue {
-        height: 90px;
-        width: 100%;
+        height: 100px;
+        width: 180px;
+        padding: 15px;
+        margin: 10px;
         background-color: #a7e9fa;
         border-left: 10px solid #2B81B0;
-        padding: 13px;
-        border-radius: 5px;
-        margin: 10px;
+        border-right: 1px solid #2B81B0;
+        border-bottom: 1px solid #2B81B0;
+        border-top: 1px solid #2B81B0;
+
     }
 }
 
@@ -166,27 +169,34 @@
 }
 
 #report {
-
+    margin-left: 80px;
     margin-top: 60px;
     margin-bottom: 50px;
-    text-align: center;
+    color: #000000;
 }
 .value {
     font-size: 25px;
     font-weight: bold;
     float: right;
     text-align: center;
-    padding: 15px;
+    padding:15px;
+}
+.report_title {
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    float: left;
 }
 
 .weekly_revenue {
     height: 100px;
+    width: 180px;
     background-color: #a7e9fa;
     border-left: 10px solid #2B81B0;
     border-right: 1px solid #2B81B0;
     border-bottom: 1px solid #2B81B0;
     border-top: 1px solid #2B81B0;
-    padding: 13px;
+    padding: 15px;
     margin: 10px;
     /* margin-right: 50px; */
 }
