--- a/public/css/home.css
+++ b/public/css/home.css
@@ -267,6 +267,12 @@
 }
 
 @media (max-width:768px) {
+    .title1 {
+        font-size: clamp(25px, 4vw, 35px);
+        font-weight: bold;
+        color: #003464;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
     .carousel-item {
         height: 30%;
     }
