--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -18,12 +18,92 @@
     color: white;
     border-radius: 5px; 
     font-size: 16px;
-    width: 100x;
+    width: 130px;
     
 }
 
-@media (max-width: 800px) {
-    .sweep-nav{
+.reg_btn{
+    background-color: #ffbf76;
+    border: #ffbf76;
+    color: white;
+    border-radius: 5px; 
+    font-size: 16px;
+    width: 130px;
+}
+
+.mobile-nav {
+    display: none;
+}
+
+.login_btn-top {
+    background-color: #1A5184;
+    border: #1A5184;
+    color: white;
+    border-radius: 5px; 
+    font-size: 16px;
+    width: 130px;
+    
+}
+
+
+@media only screen and (max-width: 800px) {
+
+    .navbar .navbar-nav{
         display: none;
     }
+
+    .login_btn-top {
+        display: none;
+    }
+    
+    .mobile-nav {
+        box-shadow: 0 -0.225rem 1.2rem rgba(0,0,0,0.3)!important;
+        display: block;
+        background-color: #DBF1FC !important;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 0;
+        overflow: hidden;
+        border-radius: 15px 15px 0px 0px;
+        text-align: center;
+    }
+    .login-text{
+        margin-bottom: 3px;
+        font-size: 15px;
+    }
+    .col-md-6{
+        width: auto;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .fas{
+        color: black;
+        font-size: 25px;
+    }
+    .nav-button{
+        align-items: center;
+        align-content: center;
+        text-align: center;
+        color: black;
+        text-decoration: none;
+    }
+    .nav-button h6{
+        font-size: 10px;
+        margin: 0%;
+    }
+    .nav-button.active, .fas-active{
+        color: #1A5184 ;
+        font-weight:700;
+    }
+
+    .dropdown{
+        position: relative;
+        list-style: none;
+    }
+    
 }
