--- a/public/css/style_welcome.css
+++ b/public/css/style_welcome.css
@@ -70,7 +70,6 @@
 
 .text {
     text-align: center;
-    padding: 10px;
 }
 
 .col {
@@ -194,11 +193,11 @@
 }
 
 .for-you2 {
-    font-size: clamp(15px, 2vw, 26px);
+    font-size: clamp(10px, 2vw, 26px);
     font-weight: 900;
     color: #ffba75;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
     text-transform: uppercase;
 }
 
@@ -329,10 +328,10 @@
     text-align: right;
 }
 
-.mobile-bg{
+.mobile-bg {
     display: none;
 }
-
+/*
 @media (max-width:425px) {
     .banner-container .banner .image {
         display: none;
@@ -369,80 +368,194 @@
         margin-bottom: 35px;
     }
 }
-
-@media (width: 801px){
-    
-}
+*/
+@media (width: 801px) {}
 
 @media (max-width:800px) {
+    
+
+    
+
+    .title1 {
+        font-size: clamp(22px, 4vw, 35px);
+        font-weight: bold;
+        color: #003464;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 0px;
+    }
+    .services {
+        margin-left: 0%;
+        flex-basis: 0%;
+    }
+    .carousel-inner {
+        width: 100%;
+        margin: auto;
+    }
+    .recom_title {
+        padding: 10px 40px 0px 40px;
+    }
+    .caption {
+        margin: 10px;
+    }
+    .card-center {
+        align-items: center;
+        align-content: center;
+        text-align: center;
+    }
+    .card-body {
+        align-content: space-between;
+    }
     .three_reason, .more-info, .faqs_con, .download, .footer, .banner-container {
         display: none;
     }
     .mobile-bg {
         display: flow-root;
-        background: linear-gradient(-10deg, #fcd3b4, #fdf1e8, #bbdff1, #BEE7FD);
-        height: 100vh;
     }
-    .recommendation {
+    .carousel-item {
+        height: 30%;
+    }
+    .carousel-caption {
+        color: white;
         position: absolute;
-        top: 2%;
-        margin-right: auto;
-        margin-left: auto;
+        bottom: 15%;
     }
-    .carousel-indicators{
-        position: static; 
-    }
-    .carousel-container1, .reco-service{
-        margin: auto;
-        width: 80%;
-        height: 30rem;
-    }
-
-    .img {
-        width: clamp(60%, 4vw, 60%);
-    }
-
-    .img1{
-        width: clamp(80%, 4vw, 80%);
-    }
-    .image {
-        padding-top: 40px;
-        text-align: center;
-    }
-
-    .get-started {
-        align-items: center;
-        text-align: center;
-    }
-    #footer {
-        position: fixed;
-        padding: 10px 10px 10px 10px;
-        bottom: 0;
-        width: 100%;
-    }
-    .text {
-        align-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 10px;
-        min-width: 60%;
-        max-width: 90%;
-        margin: auto;
-    }
-}
-
-@media (max-width:750px) {
     .banner {
-        height: 60vh;
+        max-height: 200px;
+        padding: 140px 0px;
     }
-}
+    .book_container {
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 70%;
+        padding: 5% 7%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+    .no_active {
+        color: #1A5184;
+        font-weight: bolder;
+        margin: 0% 0% 3% 0%;
+        font-size: clamp(20px, 4vw, 40px);
+    }
+    .qoute {
+        margin: 0% 7% 15% 7%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+    .download, .footer {
+        display: none;
+    }
+    .row1 {
+        justify-content: space-between;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .card-img {
+        height: 265px;
+        object-fit: fill;
+        border-radius: 0.75rem;
+    }
+    .card {
+        max-width: 100%;
+        height: 100%;
+    }
+    .customer_cards_title {
+        padding: 10px;
+        margin: 10px;
+    }
+    .mobile-spacer {
+        display: block;
+        height: 85px;
+    }
+    .columns {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .carousel-container {
+        background: rgba(255, 255, 255, 0.7);
+        width: 90%;
+        padding: 4% 4%;
+        border-radius: 0.75rem;
+        position: static;
+    }
+    .banner {
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+    .black {
+        font-size: 25px;
+    }
+    .bg-img1 {
+        display: none;
+    }
+    
+    .bg-img {
+        display: none;
+    }
+    
+    .reco-service {
+        padding: 15px;
+    }
+    
+    .reco-service1 {
+        padding: 15px;
+    }
+    .for-you-text {
+        font-size: 15px;
+        font-weight: 400;
+        margin-bottom: 0px;
+        color: #4d4d4d;
+    }
+    .title2 {
+        font-size: 22px;
+        font-weight: bold;
+        color: #FB8500;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 15px;
+        line-height: 30px;
+    }
+    .title3 {
+        font-size: 20px;
+        font-weight: bold;
+        color: #FB8500;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 15px;
+        line-height: 30px;
+    }
+    .slider1{
+        display: block;
+        width: 95%;
+        overflow-x: scroll;
+    }
+    .slider-cont{
+        margin: 10px;
+        display: flex;
+    }
+    .recom-service {
+        margin: 10px;
+        min-width: 70%;
+    }
+    .recom{
+        margin: 5px;
+        display: block;
+        text-decoration: none;
+    }
 
-@media (max-width:450px) {
-    .recommendation {
-        position: absolute;
-        top: 5%;
-        margin-right: auto;
-        margin-left: auto;
+    a:hover {
+        text-decoration: none;
+    }
+
+    .other{
+        padding: 10px;
+        border-radius: 20px;
+        box-shadow: 0 .125rem .55rem rgba(0,0,0,.075)!important;
+        background-color:#dff4ff;
+    }
+    .slider-cont2{
+        
+        margin: 0 10px;
     }
 }
 
