--- a/public/css/cleaner_job.css
+++ b/public/css/cleaner_job.css
@@ -1,18 +1,20 @@
 .body {
     min-height: 70vh;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .card-job {
     padding: 10px;
 }
+
 .read {
-    background-color:#f2f3f4; 
-    border:1px solid #dcdcdc;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #f2f3f4;
+    border: 1px solid #dcdcdc;
+    font-family: 'Raleway', sans-serif;
     padding: 5px;
     margin: 7px;
 }
+
 .job {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 15px;
@@ -61,8 +63,7 @@
     font-weight: bold;
     font-size: 25px;
     color: #FB8500;
-    margin-left: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .fa-clipboard-list {
@@ -73,10 +74,11 @@
 .booking_date {
     font-size: 18px;
     padding-bottom: 7px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
-.user_table_row{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+.user_table_row {
+    font-family: 'Raleway', sans-serif;
 }
 
 .title {
@@ -89,11 +91,13 @@
 
 .buttons {
     align-items: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
+
 .cleaner_job_modal_title, .cleaner_job_modal_date_1_1, .cleaner_job_modal_amount_1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
+
 .title {
     margin-left: 0;
     margin-right: 0;
@@ -101,11 +105,13 @@
 
 .cleaner_cards_title {
     margin: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
-.cleaner_job_status{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+.cleaner_job_status {
+    font-family: 'Raleway', sans-serif;
 }
+
 .row {
     display: flex;
     -ms-flex-wrap: wrap;
@@ -119,7 +125,7 @@
     padding-left: 0;
     font-size: 15px;
     text-indent: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .list_booking_info {
@@ -177,7 +183,7 @@
     text-align: left;
     align-items: center;
     justify-content: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .book_container {
@@ -197,8 +203,7 @@
     font-size: clamp(30px, 4vw, 40px);
 }
 
-
-.close-mobile{
+.close-mobile {
     width: 70px;
     height: 30px;
     background-color: #FFEDDF;
@@ -211,8 +216,7 @@
 }
 
 @media (max-width:800px) {
-    
-    .cleaner_job_modal_content{
+    .cleaner_job_modal_content {
         width: 100%;
         border-radius: 0%;
         height: 100%;
@@ -222,10 +226,10 @@
         max-height: 75vh;
         overflow-y: auto;
     }
-    .close-web{
+    .close-web {
         display: none;
     }
-    .close-mobile{
+    .close-mobile {
         margin-bottom: 20px;
     }
     .modal-dialog {
@@ -233,7 +237,7 @@
         margin: 0;
         height: 100%;
     }
-    .modal-body{
+    .modal-body {
         padding: 40px;
         max-height: 75vh;
         overflow-y: auto;
@@ -271,16 +275,17 @@
         margin: 0% 7% 15% 7%;
         font-size: clamp(10px, 4vw, 25px);
     }
-    .banner-container .banner1 .image{
+    .banner-container .banner1 .image {
         display: none
     }
 }
 
 @media (min-width:801px) {
-.mobile-spacer, .close-mobile{
-    display: none;
+    .mobile-spacer, .close-mobile {
+        display: none;
+    }
 }
-}
+
 @media (max-width:450px) {
     .banner {
         height: 60vh;
@@ -321,3 +326,12 @@
     border-radius: 10px;
 }
 
+.cleaner_job_status {
+    margin-top: 5px;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 600;
+    color: #178ac9;
+    text-align: right;
+    font-family: 'Roboto', sans-serif;
+}
