--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -5,62 +5,90 @@ body {
     background-color: #EDF1F8;
     overflow-x: hidden;
 }
+
 #active {
     color: #FFB703;
 }
-.head{
-    align-items: center;
 
+.head {
+    align-items: center;
 }
 
 /* Admin Dashboard */
 
+.attendance{
+    background-color: #ffffff;
+    width: 450px;
+    padding: 30px 40px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left:50%;
+    top:50%;
+    border-radius: 10px;
+}
+
 .col_dashboard_main {
     background-color: #FFFFFF;
+    padding-left: 0px;
+    padding-right: 0px;
 }
+
 .col-dashboard {
     margin: 40px;
     background-color: #EDF1F8;
     height: 100%;
     width: 300px;
 }
+
+.adjust_con_dash {
+    text-align: center;
+    padding: 10 px 40 px;
+}
+
 .dashboard_title {
     margin-top: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-left: 50px;
+    font-family: 'Raleway','sans-serif';
+    font-size: 22px;
+    text-align: center;
     font-weight: bolder;
-    font-size: 20px;
 }
+
 .active_services_con {
     height: 100%;
     width: 100%;
-    margin: 15px;;
+    margin: 15px;
+    ;
     background-color: rgba(255, 183, 3, .5);
     border-left: 15px solid #FFB703;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
 }
+
 .service_name {
     font-size: 20px;
     font-weight: bolder;
     margin-top: auto;
     margin-bottom: auto;
     width: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
+
 .transaction_id {
     font-size: 13px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
+
 .customer_name {
     font-size: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
+
 .arrow_right_con {
     width: 100%;
 }
+
 .right {
     display: inline-block;
     width: 2.2em;
@@ -68,6 +96,7 @@ body {
     border: 4px solid #f58c00;
     border-radius: 50%;
 }
+
 .right:after {
     content: '';
     display: inline-block;
@@ -81,11 +110,13 @@ body {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
 #report {
     margin: 40px 20px 0px 20px;
     color: #000000;
 }
-.daily_revenue{
+
+.daily_revenue {
     height: 100px;
     width: 180px;
     background-color: #ffcf8f;
@@ -94,8 +125,10 @@ body {
     border-top: 1px solid #f58c00;
     border-right: 1px solid #f58c00;
     padding: 13px;
+    border-radius: 20px;
 }
-.weekly_revenue{
+
+.weekly_revenue {
     height: 100px;
     width: 180px;
     background-color: #ffdd42;
@@ -104,8 +137,10 @@ body {
     border-top: 1px solid #ffae42;
     border-right: 1px solid #ffae42;
     padding: 13px;
+    border-radius: 20px;
 }
-.sweep_user{
+
+.sweep_user {
     height: 100px;
     width: 180px;
     background-color: #42c2ff;
@@ -114,8 +149,10 @@ body {
     border-top: 1px solid #0069f5;
     border-right: 1px solid #0069f5;
     padding: 13px;
+    border-radius: 20px;
 }
-.sweep_cleaner{
+
+.sweep_cleaner {
     height: 100px;
     width: 180px;
     background-color: #ffdceb;
@@ -124,7 +161,9 @@ body {
     border-top: 1px solid #ff4393;
     border-right: 1px solid #ff4393;
     padding: 13px;
+    border-radius: 20px;
 }
+
 .value {
     font-size: 25px;
     font-weight: bold;
@@ -132,61 +171,57 @@ body {
     text-align: center;
     padding: 15px;
 }
+
 .value1 {
     font-size: 25px;
     font-weight: bold;
     float: right;
     padding: 4px;
 }
+
 .report_title {
     font-size: 18px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: lighter;
+    font-family: 'Raleway','sans-serif';
+    font-weight:500;
 }
+
 #daily_transaction {
     margin-left: 30px;
 }
 
-.calendar_con{
+.calendar_con {
     margin-bottom: 30px;
 }
 
-.spacing{
+.spacing {
     margin: 0px 10px;
 }
 
-
 /* Responsiveness */
 
-@media (max-width: 991px){
+@media (max-width: 991px) {
     header {
         padding: 0 20px;
     }
     .menu-toggle {
         display: block;
     }
-    
     .cards_title {
         padding-left: 5%;
         padding-top: 30%;
     }
-    .services_con, 
-    .transaction_con, 
-    .trans_his_con {
+    .services_con, .transaction_con, .trans_his_con {
         margin-left: auto;
         margin-right: auto;
-        
     }
     .add_service_con {
         padding-left: 10%;
         margin-left: 230px;
     }
-    .card_services, 
-    .card_transaction {
+    .card_services, .card_transaction {
         margin-left: 20px;
     }
 }
-
 
 /* lost
 
@@ -217,25 +252,83 @@ body {
     color: #ff7501;
     font-size: 1.2em;
 }
-.sweep-title{
+
+.sweep-title {
     font-size: clamp(15px, 4vw, 17px);
-    font-weight:400;
+    font-weight: 400;
     color: #F7f7f7;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.footer{
+.footer {
     background-color: #061835;
     padding: .75%;
 }
 
 #footer {
     background-color: #061835;
-    margin:0 auto;
-    width:100%;
+    margin: 0 auto;
+    width: 100%;
     position: relative;
     bottom: 0px;
     padding: .75%;
+}
+
+.local_time_con {
+    height: 230px;
+    width: 100%;
+    background-color: #2B81B0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
+}
+
+.buttons{
+    padding: 10px 40px;
+}
+
+.timein_btn{
+    background-color: #6ff685;
+    border: #6ff685;
+    border-radius: 5px;
+    color: black;
+}
+.timein_btn:hover{
+    background-color: #4c9452;
+    border: black;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+.timein_btn{
+    width: 100%;
+    text-align: center;
+}
+.timeout_btn{
+    width: 100%;
+    text-align: center;
+    background-color: #f66f6f;
+    border: #f66f6f;
+    border-radius: 5px;
+}
+
+.timeout_btn:hover{
+    background-color: #ff4a4a;
+    border: black;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+
+.local_time_title {
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.local_time {
+    text-align: center;
 }
 
 .modal-title {
@@ -245,23 +338,27 @@ body {
     font-family: 'Roboto';
     color: #0069f5;
 }
-.modal-body{
+
+.modal-body {
     padding: 40px;
     max-height: 75vh;
     overflow-y: auto;
 }
-.upload_label{
+
+.upload_label {
     margin: 0px;
 }
-.modal-header{
+
+.modal-header {
     background-image: url(/images/home/header.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 0 .55rem .5rem rgba(0,0,0,.07)!important;
+    box-shadow: 0 .55rem .5rem rgba(0, 0, 0, .07)!important;
     border-radius: 0.75rem;
 }
- .select2-hidden-accessible {
+
+.select2-hidden-accessible {
     border: 0 !important;
     clip: rect(0 0 0 0) !important;
     height: 1px !important;
@@ -272,8 +369,7 @@ body {
     width: 1px !important
 }
 
-.select2-container--default .select2-selection--single,
-.select2-selection .select2-selection--single {
+.select2-container--default .select2-selection--single, .select2-selection .select2-selection--single {
     border: 1px solid #d2d6de;
     border-radius: 0;
     padding: 6px 12px;
@@ -311,8 +407,7 @@ body {
     line-height: 28px
 }
 
-.select2-container--default .select2-selection--single,
-.select2-selection .select2-selection--single {
+.select2-container--default .select2-selection--single, .select2-selection .select2-selection--single {
     border: 1px solid #d2d6de;
     border-radius: 0 !important;
     padding: 6px 12px;
@@ -327,29 +422,31 @@ body {
     width: 20px
 }
 
-.notification {         
+.notification {
     max-height: 400px;
     overflow-y: auto;
 }
+
 .read {
-    background-color:#f2f3f4; 
-    border:1px solid #dcdcdc;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #f2f3f4;
+    border: 1px solid #dcdcdc;
+    font-family: 'Raleway', sans-serif;
     padding: 5px;
     margin: 7px;
 }
+
 .cleaner {
     max-height: 400px;
     overflow-y: auto;
 }
 
-.banner-container{
+.banner-container {
     align-items: center;
     font-size: 30px;
     background-size: cover;
 }
 
-.banner{
+.banner {
     background-color: #F7f7f7;
     height: max-content;
     display: flex;
@@ -357,19 +454,19 @@ body {
     justify-content: center;
 }
 
-.banner-container .banner .image{
-    flex:1 1 250px;
+.banner-container .banner .image {
+    flex: 1 1 250px;
     padding: 35px;
     text-align: left;
     margin-bottom: 50px;
 }
 
-.banner-container .banner .image img{
+.banner-container .banner .image img {
     width: clamp(80%, 4vw, 90%);
 }
 
-.banner-container .banner .text{
-    flex:1 1 250px;
+.banner-container .banner .text {
+    flex: 1 1 250px;
     padding: clamp(60px, 4vw, 10%);
     text-align: left;
     align-items: center;
@@ -407,12 +504,12 @@ body {
     text-align: center;
 }
 
-.description{
+.description {
     color: #222;
     font-size: 15px;
     padding: 5px;
 }
 
-.starRate{
+.starRate {
     margin-left: 30px;
 }
