--- a/public/css/admin_services.css
+++ b/public/css/admin_services.css
@@ -45,7 +45,7 @@ body {
 .service_title {
     font-weight: bolder;
     font-size: 22px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .service-card{
@@ -74,7 +74,7 @@ body {
 .pricing_title {
     font-weight: bold;
     font-size: 18px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 .services_title_con {
     margin-top: 4vw;
@@ -158,10 +158,10 @@ body {
     text-indent: 50px;
     font-size: 15px;
     margin-top: 5px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 .modal_customer_services_title{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
     color: #0069f5;
     font-size: 25px;
 }
@@ -177,7 +177,7 @@ body {
     list-style-type: none;
     padding-left: 0;
     font-size: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .update_btn {
@@ -208,7 +208,7 @@ body {
 }
 
 .desc{
-    font-size: 10px;
+    font-size: 11px;
 }
 
 #footer {
