--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -9,7 +9,7 @@
 .read {
     background-color:#f2f3f4; 
     border:1px solid #dcdcdc;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
     padding: 5px;
     margin: 7px;
 }
@@ -43,11 +43,11 @@
 }
 
 .side_con_title {
-    margin-top: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-left: 50px;
+    margin: 20px 50px;
+    font-family: 'Raleway', sans-serif;
     font-weight: bolder;
     font-size: 20px;
+    text-align: center;
 }
 .available_job_con {
     height: 100%;
@@ -66,7 +66,7 @@
     margin-top: auto;
     margin-bottom: auto;
     width: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 .customer_info {
     font-size: 13px;
@@ -196,7 +196,7 @@
 }
 .report_title {
     font-size: 18px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
     float: left;
 }
@@ -210,12 +210,12 @@
 }
 .customer_name {
     font-size: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .no-jobs {
     margin-top: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
     margin-left: 50px;
     font-weight: bolder;
     font-size: 20px;
