--- a/public/css/customer_checkout.css
+++ b/public/css/customer_checkout.css
@@ -12,7 +12,7 @@ body{
 .read {
     background-color:#f2f3f4; 
     border:1px solid #dcdcdc;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', sans-serif;
     padding: 5px;
     margin: 7px;
 }
