--- a/public/css/admin_transactions.css
+++ b/public/css/admin_transactions.css
@@ -5,7 +5,10 @@ body {
     background-color: #EDF1F8;
     overflow-x: hidden;
 }
-
+.body{
+    min-height:70vh; 
+    display:flex;
+}
 #active {
     color: #FFB703;
 }
