--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -302,6 +302,11 @@ body {
     margin-top: 10px;
     display: inline;
 }
+.total_value1 {
+    color: red;
+    margin-top: 10px;
+    display: inline;
+}
 #number {
     width: 50px;
     height: 28px;
