--- a/public/css/admin_transactions.css
+++ b/public/css/admin_transactions.css
@@ -5,8 +5,8 @@ body {
     background-color: #EDF1F8;
     overflow-x: hidden;
 }
-.body{
-    min-height:70vh; 
+.row_transaction{
+    min-height:60vh; 
     display:flex;
 }
 #active {
