--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -5,8 +5,9 @@ body {
     background-color: #EDF1F8;
     overflow-x: hidden;
 }
-.body-container{
-    flex: 1 1 auto;
+.body{
+    min-height:130vh; 
+    display:flex;
 }
 #active {
     color: #FFB703;
