--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -6,7 +6,8 @@ body {
     overflow-x: hidden;
 }
 .body-container{
-    flex: 1 1 auto;
+    min-height:130vh; 
+    display:flex;
 }
 #active {
     color: #FFB703;
