--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -5,7 +5,10 @@ body {
     background-color: #EDF1F8;
     overflow-x: hidden;
 }
-
+.body-container{
+    min-height:100%; 
+    display:flex;
+}
 #active {
     color: #FFB703;
 }
@@ -770,7 +773,6 @@ body {
     position: relative;
     bottom: 0px;
     padding: .75%;
-    min-height:100vh; 
 }
 
 .modal-title {
