--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -116,7 +116,7 @@
     .col-md-3 {
         flex: 0 0 100%;
         max-width: 100%;
-        height: 50vh;
+        height: fit-content;
         padding-left: 0px;
         padding-right: 0px;
     }
