--- a/public/css/cleaner_profile.css
+++ b/public/css/cleaner_profile.css
@@ -3,7 +3,7 @@
 .main_profile_con {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 45%;
-    height: 650px;
+    height: fit-content;
     padding: 20px;
     margin: 20px;
     background-color: #fff;
@@ -131,7 +131,7 @@
     .main_profile_con {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         width: 85%;
-        height: 650px;
+        height: fit-content;
         padding: 20px;
         margin-top: 20px;
         background-color: #fff;
