--- a/public/css/customer_profile.css
+++ b/public/css/customer_profile.css
@@ -14,7 +14,7 @@
 .main_profile_con {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 45%;
-    height: 710px;
+    height: fit-content;
     padding: 20px;
     margin: 20px;
     background-color: #fff;
@@ -114,7 +114,7 @@
     .main_profile_con {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         width: 85%;
-        height: 710px;
+        height: fit-content;
         padding: 20px;
         margin-top: 20px;
         background-color: #fff;
