--- a/public/css/style_welcome.css
+++ b/public/css/style_welcome.css
@@ -374,7 +374,31 @@
 @media (max-width:800px) {
     
 
-    
+    .mobile-nav{
+        box-shadow: 0 -.125rem .55rem rgba(0,0,0,.075)!important;
+        display: block;
+        background-color: #DBF1FC !important;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 0;
+        overflow: hidden;
+    }
+    .fas{
+        color: black;
+    }
+    .slider2{
+        margin: 10px;
+    }
+    .nav-button.active, .fas-active{
+        color: #1A5184 ;
+        font-weight:700;
+    }
 
     .title1 {
         font-size: clamp(22px, 4vw, 35px);
@@ -554,7 +578,6 @@
         background-color:#dff4ff;
     }
     .slider-cont2{
-        
         margin: 0 10px;
     }
 }
