--- a/public/css/cleaner_history.css
+++ b/public/css/cleaner_history.css
@@ -316,3 +316,55 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.pagination {
+    text-align: center;
+    margin: 30px 30px 30px;
+    user-select: none;
+    display: block;
+}
+
+.pagination li {
+    display: inline-block;
+    margin: 5px;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 10%);
+}
+
+.pagination .page-item a {
+    color: #000;
+    text-decoration: none;
+    font-size: 1.2em;
+    line-height: 45px;
+}
+
+.previous-page,
+.next-page {
+    background: #0AB1CE;
+    width: 80px;
+    border-radius: 45px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.previous-page:hover {
+    transform: translateX(-5px);
+}
+
+.next-page:hover {
+    transform: translateX(5px);
+}
+
+.current-page,
+.dots {
+    background: #ccc;
+    width: 45px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.active1 {
+    background: #0AB1CE;
+}
+
+.disable {
+    background: #ccc;
+}
